# bid-tsp-indicadores

./: .buildinfo  .pre-commit-config.yaml  CHANGELOG.md  README.html  genindex.html  pyproject.toml  search.html
docs/: _config.yml  requirements.txt
notebooks/: bibliography.html  nasa-apod.html  world-bank-api.html  world-bank-package.html
