[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bid-tsp-indicadores"
dynamic = ["version"]
description = "Indicators from BID TSP"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["BID", "TSP", "indicators"]
authors = [
  {name="BID", email="bid@bid.org"},
]
maintainers = [
  {name="Victor Durand", email="durandv@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
	"requests>=2.28.1",
    "pycountry>=22.3.5",
]
[project.optional-dependencies]
notebook = ["notebook>=6.5.2"]

[project.urls]
"Homepage" = "https://github.com/durandv/bid-tsp-indicadores"
"Bug Reports" = "https://github.com/durandv/bid-tsp-indicadores/issues"
"Source" = "https://github.com/durandv/bid-tsp-indicadores"

[tool.setuptools.dynamic]
version = {attr = "datalab.__version__"}